--- a/src/main/resources/dxc/loginsystem/hello-view.fxml
+++ b/src/main/resources/dxc/loginsystem/hello-view.fxml
@@ -5,12 +5,17 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="dxc.loginsystem.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="70.0" left="100.0" right="100.0" top="70.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label text="Login Details: "/>
+    <TextField fx:id="usernameField" promptText="Username"/>
+    <PasswordField fx:id="passwordField" promptText="Password"/>
+    <Label fx:id="notificationMessage"/>
+    <Button text="Login" onAction="#onLoginButtonClick" textFill="chocolate"/>
 </VBox>
